compiler/tools/fpp-check/test/connection_pattern/health_duplicate_port.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/connection_pattern/health_duplicate_port.fpp: 19.33
    health connections instance $health { c }
                                ^
error: ambiguous pattern: instance health has ping input ports pingIn, pingIn1
